# gregorio

./: .editorconfig  .gitignore  .gregorio-version  .indent.pro  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  COPYING.md  Doxyfile  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  THANKS  UPGRADE.md  VERSION  VERSION.md  VERSIONChanger.py  VersionManager.py  VersionUpdate.py  build-ctan.sh  build-deb.sh  build.sh  configure.ac  coverage.sh  ctan-o-mat.config  ctan_upload.sh  def_check.sh  doc_check.sh  git-build.sh  git-install.sh  install-gtex.sh  install.sh  list.sh
contrib/: 900_gregorio.xml  Makefile.am  README  README.md  Scribus.sh  checkSyllabation.py  config-texworks-mac.command  config-texworks-mac.sh  config-texworks.command  gabc.lang  gabc.vim  gprocess  greg-book.engine  gregorio-mode.el  gregorio-scribus.lua  gregorio-scribus.pl  gregorio.scpt  lamed-dvipdfm.engine  pdfLuaLaTeX.engine  system-setup.bat  system-setup.command  system-setup.sh
cygwin/: README  buildcygwin.sh  doinstall.sh
debian/: README.Debian  README.md  build-deb.sh  changelog  control  copyright  gregorio.docs  gregorio.examples  gregorio.lintian-overrides  gregorio.manpages  gregorio.postinst  gregorio.postrm  gregoriotex.dirs  gregoriotex.doc-base  gregoriotex.doc-base.nabc  gregoriotex.docs  gregoriotex.examples  gregoriotex.install  gregoriotex.links  gregoriotex.maps  manpage.xml  rules  watch
doc/: Appendix_Font_Tables.tex  Command_Index_User.tex  Command_Index_gregorio.tex  Command_Index_internal.tex  Gabc.tex  GregorioNabcRef.tex  GregorioRef.lua  GregorioRef.tex  Makefile.am  README.md  UserManual.tex  doc_README.md  factus.gabc  gsp-sample.tex
examples/: Makefile.am  PopulusSion.gabc  PopulusSion.tex  VenitLumenTuum.gabc  completetest.gabc  completetest.tex  example-lamed.tex  example-latex.tex  example-luatex.tex  main-lamed.tex  main-latex.tex  main-lualatex.tex  main-luatex.tex  main-no-margin.tex  test.gabc
fonts/: FONTLOG  INSTALL  Makefile  Makefile.am  README  README.md  README_supp.md  convertsfdtottf.py  convertsfdtottf.sh  create-font.pl  create-ovp.perl  create_font.pl  fontforge_python.sh  granapadano-base.sfd  greciliae-0.pfb  greciliae-0.tfm  greciliae-1.pfb  greciliae-1.tfm  greciliae-2.pfb  greciliae-2.tfm  greciliae-3.pfb  greciliae-3.tfm  greciliae-4.pfb  greciliae-4.tfm  greciliae-5.pfb  greciliae-5.tfm  greciliae-6.pfb  greciliae-6.tfm  greciliae-7.pfb  greciliae-7.tfm  greciliae-8.pfb  greciliae-8.tfm  greciliae-base.sfd  greciliae.json  greciliae.map  greciliae.ofm  greciliae.ovf  greciliae.ovp  greciliae.yaml  greextra.map  (+69 more)
include/: Makefile.am  dump.h  gabc.h  gregoriotex.h  messages.h  opustex.h  struct.h  xml.h
lib/: Makefile.am  characters.c  gregorio.pc.in  messages.c  messages.h  plugin.h  plugin_loader.c  plugin_loader.h  struct.c  struct.h  unicode.c
macosx/: Gregorio.pkgproj  README.MacPackage  README.md  Summary.rtf  Uninstall-Gregorio.pkgproj  Uninstall_intro.rtf  Uninstall_intro.txt  Uninstall_summary.rtf  Uninstall_summary.txt  base-post.sh  common.sh  create_package.sh  douninstall.sh  example.create_package.rc  gregorio-base.pkgproj  gregorio-contrib.pkgproj  gregorio-doc.pkgproj  gregorio-examples.pkgproj  mac_README.md  postflight.sh  test.sh
plugins/: Makefile.am  README.Plugins
plugins/gabc/: Makefile.am  gabc-elements-determination.c  gabc-glyphs-determination.c  gabc-notes-determination.l  gabc-score-determination-l.h  gabc-score-determination.l  gabc-score-determination.y  gabc-write.c  gabc.h
plugins/gregoriotex/: Makefile.am  gregoriotex-write.c  gregoriotex.h
plugins/opustex/: Makefile.am  opustex-write.c  opustex.h
plugins/xml/: Makefile.am  xml-read.c  xml-utils.c  xml-write.c  xml.h
po/: Makevars  POTFILES.in  gregorio.pot
src/: .indent.pro  Makefile.am  bool.h  characters.c  characters.h  config.h  dump.c  gabc-elements-determination.c  gabc-glyphs-determination.c  gabc-notes-determination.c  gabc-notes-determination.l  gabc-score-determination-l.h  gabc-score-determination.l  gabc-score-determination.y  gabc-write.c  gabc.h  gregorio-utils.c  gregoriotex-write.c  gregoriotex.h  messages.c  messages.h  opustex-write.c  opustex.h  plugins.h  sha1.c  sha1.h  struct-utils.c  struct.c  struct.h  struct_iter.h  support.c  support.h  unicode.c  unicode.h  xml-read.c  xml-utils.c  xml-write.c  xml.h
src/dump/: Makefile.am  dump.c  dump.h
src/gabc/: Makefile.am  gabc-elements-determination.c  gabc-glyphs-determination.c  gabc-notes-determination.l  gabc-score-determination.c  gabc-score-determination.h  gabc-score-determination.l  gabc-score-determination.y  gabc-write.c  gabc.h
src/gregoriotex/: Makefile.am  gregoriotex-position.c  gregoriotex-write.c  gregoriotex.h
src/opustex/: Makefile.am  opustex-write.c
src/vowel/: vowel-rules.l  vowel-rules.y  vowel.c  vowel.h
src/xml/: Makefile.am  xml-read.c  xml-write.c
tests/: Main.tex  completetest.gabc  gregoriosyms.sty  gregoriotex-chars-translate.lua  gregoriotex-chars.tex  gregoriotex-ictus.lua  gregoriotex-signs.tex  gregoriotex-spaces.tex  gregoriotex-syllable.tex  gregoriotex-symbols.tex  gregoriotex.lua  gregoriotex.sty  gregoriotex.tex  gsp-default.tex  optimize-gabc.sty  optimize_gabc.lua  optimize_gabc_style.lua  test75a.gabc  test75b.gabc  test78.gabc  test79.gabc  test82.gabc  test84.gabc  test98.gabc  test_all_headers.gabc
tex/: Command Index.tex  Command_Index.tex  Command_Index_User.tex  Command_Index_gregorio.tex  Command_Index_internal.tex  Makefile  Makefile.am  english.vwl  gregall.lua  gregall.tex  gregoriosyms.sty  gregoriotex-chars-translate.lua  gregoriotex-chars.tex  gregoriotex-chars.tex.in  gregoriotex-common.tex  gregoriotex-gsp-default.tex  gregoriotex-ictus.lua  gregoriotex-main.tex  gregoriotex-nabc.lua  gregoriotex-nabc.tex  gregoriotex-signs.lua  gregoriotex-signs.tex  gregoriotex-signs.tex.orig  gregoriotex-spaces.tex  gregoriotex-syllable.tex  gregoriotex-symbols.lua  gregoriotex-symbols.tex  gregoriotex.lua  gregoriotex.sty  gregoriotex.tex  gregoriotex.tex.orig  gsp-default.tex  main-luatex.tex  (+3 more)
(+56 files in other folders)
